# rust-censure

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: censor.rs  html.rs  lib.rs  tests.rs  util.rs
src/lang/: common.rs  mod.rs
src/lang/en/: data.rs  mod.rs
src/lang/ru/: data.rs  mod.rs
src/structs/: mod.rs
