[package]
name = "rust-censure"
version = "0.1.2"
edition = "2024"
description = "Simple profanity filter."
license = "MIT"
repository = "https://github.com/Priler/rust-censure"
keywords = ["profanity", "censure"]

[dependencies]
fancy-regex = "0.16.2"
once_cell = "1.19"
# aho-corasick = "1.1"    # optional, for faster simple replaces (can skip)
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.7.0"

[[bench]]
name = "benchmark"
harness = false